TEST_PROGRAMS/INVALID/cheuk_siow/invalid1.min
# Invalid program 1: declaration after statement.

x = 1.0;
var x: float;
print x;
